# Parallel-computing

./: Consistent.py  check.py  main.py  new_main.py  pyproject.toml  setup.cfg  utils.py
