[tool.poetry]
name = "parallel-computing"
version = "0.1.0"
description = ""
authors = ["Link-God", "TheDonten"]
readme = "README.md"
packages = [{include = "parallel_computing"}]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.2"
sympy = "^1.11.1"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length=120
profile = "black"
# add for black compatible, more info: https://black.readthedocs.io/en/stable/the_black_code_style.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true